minor fix on css grid - illustrations

--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -5,9 +5,11 @@
     <title>Projects&mdash;Justin Andre</title>
     <link rel="icon" href="../img/icon.ico">
     <link rel="stylesheet" href="/css/master.css">
-    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/script.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="../js/scrollmagic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -40,13 +42,12 @@
 </article>
 
 
-<article class="illustration-splash splash">  </article>
+<article class="illustration-splash splash ">  </article>
 <article class="idtheft1 idtheft-grid1">  </article>
 <article class="idtheft2 idtheft-grid2"> </article>
 <article class="esports1 esports-grid1"> </article>
 <article class="esports2 esports-grid2 esports-bk1"> </article>
 <article class="esports2 esports-grid3 esports-bk2"> </article>
-<!-- <article class="esports2 esports-grid4"> 7 </article> -->
 <article class="legup legup-grid"></article>
 <article class="editorial editorial-grid"></article>
 <article class="password password-grid1 password-bk1"> </article>
