adds swish page

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
   </article>
 </box>
 <box class="project-box animated fadeIn">
-  <aside class="project-image" id="swish-background"></aside>
+  <a href="../projects/swish.html">
+  <aside class="project-image" id="swish-background"></aside></a>
   <article class="project-info">
     <caption> Product Design—</caption>
     <h2> Swish</h2>
