--- a/projects/swish.html
+++ b/projects/swish.html
@@ -27,6 +27,31 @@
 <content>
 
 
+  <section class="swish-grid">
+    <div class="swish-header">
+      <aside class="swish-title">
+      <caption> User Interface & User Experience</caption>
+      <h3> Swish</h3>
+      </aside>
+    <aside class="swish-details">
+      <caption> The Challenge</caption>
+      <p>There is a lack of human interaction in the experience in e-commerce. </p>
+    </aside>
+    <aside class="swish-details">
+      <caption> The Solution</caption>
+      <p>Create a digital product to generate a better post purchase experience</p>
+    </aside>
+   </div>
+<div class="swish-splash"></div>
+<article class="swish-quote">
+<h1>Swish is a browser and mobile application extentsion that creates a better online shopping experience. One of Swish’s key features is that it collects and compiles all your wishlisted items across all online stores you are logged into. </h1>
+</article>
+<div class="swish-screen1"></div>
+<div class="swish-wishlist"></div>
+<div class="swish-delivery"></div>
+  </section>
+
+
 <article class=" footer animated fadeIn">
 <aside class="footer-link">
   <ul>
