fixes content divs on project and index

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,8 @@
       </aside>
     </nav>
 
+<content>
+
 <section class="project-grid animated fadeIn">
 <box class="project-box">
   <aside class="project-image" id="milya-background"></aside>
@@ -96,5 +98,6 @@
 </aside>
 
 </article>
+</content>
 </body>
 </html>
