--- a/projects/swish.html
+++ b/projects/swish.html
@@ -44,7 +44,7 @@
    </div>
 <div class="swish-splash"></div>
 <article class="swish-quote">
-<h1>Swish is a browser and mobile application extentsion that creates a better online shopping experience. One of Swish’s key features is that it collects and compiles all your wishlisted items across all online stores you are logged into. </h1>
+<h1>Swish is a browser extentsion and mobile application  that creates a better online shopping experience. One of Swish’s key features is that it collects and compiles all your wishlisted items across all online stores you are logged into. </h1>
 </article>
 <div class="swish-screen1"></div>
 <div class="swish-wishlist"></div>
