adds temp page link and fix project page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ Website is currently under construction!
 <h1>Justin is a designer based in Toronto, Canada.
   He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
 
+
+<a class="temporary" href="https://venerism.github.io/blog/">Temporary Projects Page </a>
+
 </section>
 
 
