--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -27,6 +28,13 @@
 
 <content>
 
+<!-- <section class="project-temp">
+<aside class=""> Milya </aside>
+<aside class=""> Swish </aside>
+<aside class=""> Illustrations</aside>
+<aside class=""> Moving Posters</aside>
+</section> -->
+
 <section class="project-grid animated fadeIn">
 <box class="project-box">
   <aside class="project-image" id="milya-background"></aside>
@@ -45,15 +53,6 @@
     <p>Redefining Online Shopping Experience</p>
   </article>
 </box>
-
-<!--<box class="project-box animated fadeIn">
-  <aside class="project-image"></aside>
-  <article class="project-info">
-    <caption>User Experience—</caption>
-  <h2>  Credit Suisse' Firefly</h2>
-  <p> Reshaping an exisiting sign up flow</p>
-  </article>
-</box> -->
 
 <box class="project-box animated fadeIn">
   <aside class="project-image" id="movingposters-background"></aside>
