temporary page title change

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Website is currently under construction!
   He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
 
 
-<a class="temporary" href="https://venerism.github.io/blog/">Temporary Projects Page </a>
+<a class="temporary" href="https://venerism.github.io/blog/">Click to see temporary projects page </a>
 
 </section>
 
