--- a/projects/swish.html
+++ b/projects/swish.html
@@ -27,29 +27,112 @@
 <content>
 
 
-  <section class="swish-grid">
-    <div class="swish-header">
-      <aside class="swish-title">
-      <caption> User Interface & User Experience</caption>
-      <h3> Swish</h3>
-      </aside>
-    <aside class="swish-details">
-      <caption> The Challenge</caption>
-      <p>There is a lack of human interaction in the experience in e-commerce. </p>
-    </aside>
-    <aside class="swish-details">
-      <caption> The Solution</caption>
-      <p>Create a digital product to generate a better post purchase experience</p>
-    </aside>
+<section class="swish-splashbox">
+  <div class="swish-title">
+    <h4>Swish</h4>
+  </div>
+  <div class="swish-challenge">
+    <caption> The Challenge</caption>
+    <p>Kids today are on social media 24/7
+    and all they think about is about random stuff
+    </p>
+  </div>
+  <div class="swish-solution">
+    <caption> The Solution</caption>
+    <p>Kids today are on social media 24/7
+    and all they think about is about random stuff
+    </p>
+  </div>
+  <div class="swish-title-splash swish-splash">4</div>
+</section>
+
+<section class="swish-introduction">
+  <div class="swish-overview-title"> <h3>01 Overview</h3> </div>
+  <div class="swish-overview-para">
+    <h2>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience. One of Swish’s
+      key features is that it collects and compiles all your wishlisted
+      items across all online stores you are logged into. </h2> </div>
+  <div class="swish-inspiration-title"> <h3>02 Inspiration</h3> </div>
+  <div class="swish-inspiration-para">
+    <h2>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience. One of Swish’s
+      key features is that it collects and compiles all your wishlisted
+      items across all online stores you are logged into. </h2>
+      <br>
+      <h2>Swish is a browser and mobile application extentsion
+        that creates a better online shopping experience. One of Swish’s
+        key features is that it collects and compiles all your wishlisted
+        items across all online stores you are logged into. </h2>
+
    </div>
-<div class="swish-splash"></div>
-<article class="swish-quote">
-<h1>Swish is a browser extentsion and mobile application  that creates a better online shopping experience. One of Swish’s key features is that it collects and compiles all your wishlisted items across all online stores you are logged into. </h1>
-</article>
-<div class="swish-screen1"></div>
-<div class="swish-wishlist"></div>
-<div class="swish-delivery"></div>
-  </section>
+</section>
+
+<section class="swish-process">
+  <div class="process-title">
+    <h3> 03 Process </h3>
+  </div>
+
+  <div class="swish-process-box">
+  <aside class="swish-process1"></aside>
+  <caption> Research</caption>
+  <p>Swish is a browser and mobile application extentsion
+    that creates a better online shopping experience.
+    One of Swish’s key features is that it collects
+    and compiles all your wishlisted items across all
+    online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+  <aside class="swish-process1"></aside>
+  <caption> Prioritising Solutions</caption>
+  <p>Swish is a browser and mobile application extentsion
+    that creates a better online shopping experience.
+    One of Swish’s key features is that it collects
+    and compiles all your wishlisted items across all
+    online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+    <aside class="swish-process1"></aside>
+    <caption>Personas + Userflows & User Scenarios</caption>
+    <p>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience.
+      One of Swish’s key features is that it collects
+      and compiles all your wishlisted items across all
+      online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+  <aside class="swish-process1"></aside>
+  <caption> Low Fidelity Sketches + Wireframing</caption>
+  <p>Swish is a browser and mobile application extentsion
+    that creates a better online shopping experience.
+    One of Swish’s key features is that it collects
+    and compiles all your wishlisted items across all
+    online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+    <aside class="swish-process1"></aside>
+    <caption> High Fidelity </caption>
+    <p>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience.
+      One of Swish’s key features is that it collects
+      and compiles all your wishlisted items across all
+      online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+    <aside class="swish-process1"></aside>
+    <caption> Prototyping</caption>
+    <p>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience.
+      One of Swish’s key features is that it collects
+      and compiles all your wishlisted items across all
+      online stores you are logged into. </p>
+  </div>
+</section>
 
 
 <article class=" footer animated fadeIn">
