adds new sections on swish

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -43,7 +43,7 @@
     and all they think about is about random stuff
     </p>
   </div>
-  <div class="swish-title-splash swish-splash">4</div>
+  <div class="swish-title-splash swish-splash"></div>
 </section>
 
 <section class="swish-introduction">
@@ -132,6 +132,38 @@
       and compiles all your wishlisted items across all
       online stores you are logged into. </p>
   </div>
+</section>
+
+<section class="swish-personas">
+  <div class="process-title">
+    <h3> 04 Personas</h3>
+  </div>
+
+  <div class="swish-process-box">
+    <aside class="swish-persona-box"></aside>
+    <p>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience.
+      One of Swish’s key features is that it collects
+      and compiles all your wishlisted items across all
+      online stores you are logged into. </p>
+  </div>
+
+  <div class="swish-process-box">
+    <aside class="swish-persona-box"></aside>
+    <p>Swish is a browser and mobile application extentsion
+      that creates a better online shopping experience.
+      One of Swish’s key features is that it collects
+      and compiles all your wishlisted items across all
+      online stores you are logged into. </p>
+  </div>
+</section>
+
+<section class="swish-userflows">
+  <div class="process-title">
+    <h3> 05 User Flows </h3>
+  </div>
+  <div class="swish-userflow-box"></div>
+  <div class="swish-userflow-box"></div>
 </section>
 
 
