adds sections on swish

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -166,6 +166,16 @@
   <div class="swish-userflow-box"></div>
 </section>
 
+<section class="swish-sketches">
+  <div class="swish-sketch-title">
+    <h3> 06 Sketches </h3>
+  </div>
+  <div class="swish-sketch-box">1</div>
+  <div class="swish-sketch-box">2</div>
+  <div class="swish-sketch-box">3</div>
+  <div class="swish-sketch-box">4</div>
+</section>
+
 
 <article class=" footer animated fadeIn">
 <aside class="footer-link">
