--- a/info.html
+++ b/info.html
@@ -2,61 +2,184 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Design&mdash;Justin Andre</title>
-    <link rel="icon" href="img/icon.ico">
-      <link rel="stylesheet" href="css/animate.css">
+    <title> Swish&mdash;Justin Andre</title>
+    <link rel="icon" href="../img/icon.ico">
+      <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
   </head>
   <body>
 
-    <nav class="aniamted fadeInUp">
+    <nav class="aniamted fadeIn">
       <aside class="nav-left">
-         <a href="index.html">
-        <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="index.html">JUSTIN ANDRE</a>
+         <a href="/">
+        <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
+        <a class="logo" href="/">JUSTIN ANDRE</a>
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="info.html">info</a>
-      <a class="blog" href="projects.html"> Projects</a>
+      <a class="blog" href="../info.html">info</a>
+      <a class="blog" href="../projects.html"> Projects</a>
       </aside>
     </nav>
+
 <content>
 
+<section class="info-splashbox">
+  <div class="info-title">
+    <h3> Justin</h3>
+    <h3> Veneracion</h3>
+  </div>
+  <div class="info-splash">
+    1
+  </div>
+</section>
 
-
-
-  <article class=" footer animated fadeIn">
-  <aside class="footer-link">
-    <ul>
-
-    <caption>Contact&mdash;</caption>
+<section class="bio">
+<div class="info-exp"> <caption>Experience</caption>
+<ul>
+  <li>
+    <b>UI/UX Intern</b>
     <br>
-    <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+    <p>Icon Worldwide</p>
+  </li>
+  <br>
+  <li>
+    <b>Junior Designer</b>
+    <br>
+    <p>1Password - AgileBits</p>
+  </li>
+  <br>
+  <li>
+    <b>Junior Designer</b>
+    <br>
+    <p>Outsitethebox</p>
+  </li>
+</ul>
+</div>
+<div class="info-exp"> <caption>Education</caption>
+  <ul>
+    <li>
+      <b>York/Sheridan Design</b>
+      <p>2014 - 2018</p>
+    </li>
     </ul>
-  </aside>
+</div>
+<div class="info-paragraph"> <h2>
+Justin is a reliable and go-to designer
+that knows when to switch between work and play.
+His vision is to become the workhorse and the
+all-purpose designer who can help build ideas
+in the team and rapidly provide progress through
+clear collaboration, strong sense of design thinking
+  and a wide range of technical skillsets.
 
-  <aside class="footer-link">
-
-
-    <ul>
-      <caption>Elsewhere&mdash;</caption>
+</h2>
+</div>
+<div class="info-tools">
+  <ul>
+    <li>
+      <b>UI/UX Intern</b>
       <br>
-      <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
-      <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+      <p>Icon Worldwide</p>
+    </li>
+    <br>
+    <li>
+      <b>Junior Designer</b>
+      <br>
+      <p>1Password - AgileBits</p>
+    </li>
+    <br>
+    <li>
+      <b>Junior Designer</b>
+      <br>
+      <p>Outsitethebox</p>
+    </li>
+  </ul>
 
-    </ul>
-  </aside>
 
-  </article>
+</div>
+
+
+
+<div class="info-expertise">
+
+  <ul>
+    <li>
+      <b>UI/UX Intern</b>
+      <br>
+      <p>Icon Worldwide</p>
+    </li>
+    <br>
+    <li>
+      <b>Junior Designer</b>
+      <br>
+      <p>1Password - AgileBits</p>
+    </li>
+    <br>
+    <li>
+      <b>Junior Designer</b>
+      <br>
+      <p>Outsitethebox</p>
+    </li>
+  </ul>
+
+</div>
+</section>
+
+
+<section class="essentials">
+  <div class="essentials-title">
+<h3> Essentials</h3>
+  </div>
+  <div class="essentials-splash">
+2
+  </div>
+  <div class="essentials-list">
+    <h2> List </h2>
+  </div>
+  <div class="essentials-list">
+<h2> List </h2>
+  </div>
+</section>
+
+
+
 </content>
 
+<article class=" footer animated fadeIn">
+<aside class="footer-link">
+  <ul>
+
+  <caption>Contact&mdash;</caption>
+  <br>
+  <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+  </ul>
+</aside>
+
+<aside class="footer-link">
+
+
+  <ul>
+    <caption>Elsewhere&mdash;</caption>
+    <br>
+    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+
+  </ul>
+</aside>
+
+</article>
+
+<div class="scroll-to-top-link">
+<img src="../img/arrow.svg" alt="arrow">
+</div>
 
 </body>
 
 
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+<script src="../js/hover.js"></script>
 </html>
