changes from "info" to "profile"

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="info.html">info</a>
+      <a class="blog" href="info.html">Profile</a>
       <a class="blog" href="projects.html"> Projects</a>
       </aside>
     </nav>
