adds swish browser section

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -174,6 +174,35 @@
 </section>
 
 
+<section class="swish-mobile">
+<div class="swish-screen1"></div>
+<div class="swish-wishlist"></div>
+<div class="swish-delivery"></div>
+</section>
+
+<section class="swish-mobile">
+<div class="swish-screen1"></div>
+<div class="swish-wishlist"></div>
+<div class="swish-delivery"></div>
+</section>
+
+<section class="swish-mobile">
+<div class="swish-screen1"></div>
+<div class="swish-wishlist"></div>
+<div class="swish-delivery"></div>
+</section>
+
+<section class="swish-br-box">
+  <div class="swish-browser-title">
+    <h3> Browser extentsion</h3>
+  </div>
+  <div class="swish-browser1"></div>
+  <div class="swish-browser1"></div>
+  <div class="swish-browser1"></div>
+  <div class="swish-browser1"></div>
+  <div class="swish-browser1"></div>
+  <div class="swish-browser1"></div>
+</section>
 
 </content>
 
