cleans media queries on swish page // deletes illustration page

--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -27,36 +27,11 @@
       </aside>
     </nav>
 
-<section class="illustration-grid">
-<article class="casestudy-header cs-header-grid">
-    <aside class="casestudy-title animated fadeIn">
-      <caption> 2016—2018</caption>
-      <h3> Illustrations </h3>
-    </aside>
-    <aside class="casestudy-description animated fadeIn">
-      <p>Some Illustrations from 2016 to now. Illustration will
-        always have a place in my heart. It is a different kind of
-        problem solving compared to user interface and user experience
-        designs (obviously). It is super fun making these drawings
-        and I continue illustrating either professionally or during my spare time.</p>
-</article>
+<content>
 
 
-<article class="illustration-splash splash ">  </article>
-<article class="idtheft1 idtheft-grid1">  </article>
-<article class="idtheft2 idtheft-grid2"> </article>
-<article class="esports1 esports-grid1"> </article>
-<article class="esports2 esports-grid2 esports-bk1"> </article>
-<article class="esports2 esports-grid3 esports-bk2"> </article>
-<article class="legup legup-grid"></article>
-<article class="editorial editorial-grid"></article>
-<article class="password password-grid1 password-bk1"> </article>
-<article class="password password grid2 password-bk2"> </article>
-<article class="password password-grid3 password-bk3"> </article>
-<article class="password password-grid4 password-bk4"> </article>
-
-
-</section>
+  
+</content>
 
 <div class="scroll-to-top-link">
 <img src="../img/arrow.svg" alt="arrow">
