--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -29,8 +29,55 @@
 
 <content>
 
+<section class="illustration-splash">
 
-  
+</section>
+
+<section class="illustration-idtheft">
+  <div class="illustration-overview">
+    <h3>01 Identity Theft</h3>
+  </div>
+  <div class="idtheft-1"> 1 </div>
+  <div class="idtheft-2"> 2 </div>
+  <div class="idtheft-3"> 3 </div>
+</section>
+
+<section class="illustration-esports">
+  <div class="illustration-overview">
+    <h3>02 E Sports </h3>
+  </div>
+  <div class="esports-1"></div>
+  <div class="esports-2"></div>
+  <div class="esports-3"></div>
+  <div class="esports-4"></div>
+  <div class="esports-5"></div>
+  <div class="esports-6"></div>
+</section>
+
+<section class="illustration-legup">
+  <div class="illustration-overview">
+    <h3> 03 Leg Up</h3>
+  </div>
+  <div class="legup"></div>
+</section>
+
+<section class="illustration-editorial">
+  <div class="illustration-overview">
+    <h3> O4 Editorial</h3>
+  </div>
+  <div class="editorial"></div>
+</section>
+
+<section class="illustration-1password">
+  <div class="illustration-overview">
+    <h3> 05 1Password</h3>
+  </div>
+  <div class="agile1"></div>
+  <div class="agile2"></div>
+  <div class="agile3"></div>
+  <div class="agile4"></div>
+</section>
+
 </content>
 
 <div class="scroll-to-top-link">
