new Illustration Page

--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -30,6 +30,15 @@
 <content>
 
 <section class="illustration-splash">
+<div class="illustration-title"><h4>Illustrations</h4></div>
+<div class="illustration-summary">
+  <p>Swish is a browser and mobile application
+     extentsion that creates a better online shopping
+     experience. One of Swish’s key features is that it
+     collects and compiles all your wishlisted items across
+      all online stores you are logged into. </p>
+</div>
+
 
 </section>
 
@@ -63,7 +72,7 @@
 
 <section class="illustration-editorial">
   <div class="illustration-overview">
-    <h3> O4 Editorial</h3>
+    <h3> 04 Editorial</h3>
   </div>
   <div class="editorial"></div>
 </section>
