--- a/info.html
+++ b/info.html
@@ -77,26 +77,39 @@ clear collaboration, strong sense of design thinking
 </h2>
 </div>
 <div class="info-tools">
-  <ul>
-    <li>
-      <b>UI/UX Intern</b>
-      <br>
-      <p>Icon Worldwide</p>
-    </li>
-    <br>
-    <li>
-      <b>Junior Designer</b>
-      <br>
-      <p>1Password - AgileBits</p>
-    </li>
-    <br>
-    <li>
-      <b>Junior Designer</b>
-      <br>
-      <p>Outsitethebox</p>
-    </li>
-  </ul>
+  <div class="tools-title">
+    <caption> Weapons of Design</caption>  
+  </div>
+  <div class="tools1">
+    <ul>
+      <li>
+        <p>Icon Worldwide</p>
+      </li>
+      <li>
+        <br>
+        <p>1Password - AgileBits</p>
+      </li>
+      <li>
+        <p>Outsitethebox</p>
+      </li>
+    </ul>
+  </div>
 
+  <div class="tools2">
+    <ul>
+      <li>
+        <p>Icon Worldwide</p>
+      </li>
+      <br>
+      <li>
+        <p>1Password - AgileBits</p>
+      </li>
+      <br>
+      <li>
+        <p>Outsitethebox</p>
+      </li>
+    </ul>
+  </div>
 
 </div>
 
