cleans info and type

--- a/info.html
+++ b/info.html
@@ -27,8 +27,8 @@
 
 <section class="info-splashbox">
   <div class="info-title">
-    <h3> Justin</h3>
-    <h3> Veneracion</h3>
+    <h4> Justin</h4>
+    <h4> Veneracion</h4>
   </div>
   <div class="info-splash">
     1
@@ -37,30 +37,25 @@
 
 <section class="bio">
 <div class="info-exp"> <caption>Experience</caption>
-<ul>
-  <li>
-    <b>UI/UX Intern</b>
-    <br>
-    <p>Icon Worldwide</p>
-  </li>
-  <br>
-  <li>
-    <b>Junior Designer</b>
-    <br>
-    <p>1Password - AgileBits</p>
-  </li>
-  <br>
-  <li>
-    <b>Junior Designer</b>
-    <br>
-    <p>Outsitethebox</p>
-  </li>
-</ul>
-</div>
-<div class="info-exp"> <caption>Education</caption>
   <ul>
-    <li>
-      <b>York/Sheridan Design</b>
+    <li class="biolist">
+      <b>UI/UX Intern</b>
+      <p>Icon Worldwide - Zurich</p>
+    </li>
+    <li class="biolist">
+      <b>Junior Designer</b>
+      <p>1Password - Toronto</p>
+    </li>
+    <li class="biolist">
+      <b>Junior Designer</b>
+      <p>OutSiteTheBox - Toronto</p>
+    </li>
+  </ul>
+</div>
+<div class="info-exp2"> <caption>Education</caption>
+  <ul>
+    <li class="biolist">
+      <b>York Sheridan Design</b>
       <p>2014 - 2018</p>
     </li>
     </ul>
@@ -78,36 +73,27 @@ clear collaboration, strong sense of design thinking
 </div>
 <div class="info-tools">
   <div class="tools-title">
-    <caption> Weapons of Design</caption>  
+    <caption> Weapons of Design</caption>
   </div>
   <div class="tools1">
     <ul>
-      <li>
-        <p>Icon Worldwide</p>
-      </li>
-      <li>
-        <br>
-        <p>1Password - AgileBits</p>
-      </li>
-      <li>
-        <p>Outsitethebox</p>
-      </li>
+      <li class="biolist">Sketch</li>
+      <li class="biolist">Photoshop</li>
+      <li class="biolist">Illustrator</li>
+      <li class="biolist">InDesign</li>
+      <li class="biolist">AfterEffects</li>
+      <li class="biolist">Figma</li>
     </ul>
   </div>
 
   <div class="tools2">
     <ul>
-      <li>
-        <p>Icon Worldwide</p>
-      </li>
-      <br>
-      <li>
-        <p>1Password - AgileBits</p>
-      </li>
-      <br>
-      <li>
-        <p>Outsitethebox</p>
-      </li>
+      <li class="biolist">Framer</li>
+      <li class="biolist">Flinto</li>
+      <li class="biolist">HTML</li>
+      <li class="biolist">CSS(SCSS)</li>
+      <li class="biolist">JavaScript</li>
+      <li class="biolist">GitHub</li>
     </ul>
   </div>
 
@@ -116,27 +102,17 @@ clear collaboration, strong sense of design thinking
 
 
 <div class="info-expertise">
-
-  <ul>
-    <li>
-      <b>UI/UX Intern</b>
-      <br>
-      <p>Icon Worldwide</p>
-    </li>
-    <br>
-    <li>
-      <b>Junior Designer</b>
-      <br>
-      <p>1Password - AgileBits</p>
-    </li>
-    <br>
-    <li>
-      <b>Junior Designer</b>
-      <br>
-      <p>Outsitethebox</p>
-    </li>
-  </ul>
-
+  <div class="expertise-title">
+    <caption> Areas of Expertise</caption></div>
+    <div class="expertise-box">
+      <ul>
+        <li class="biolist">User Interface</li>
+        <li class="biolist">User Experience</li>
+        <li class="biolist">Brand Strategy</li>
+        <li class="biolist">Brand Identity</li>
+        <li class="biolist">Digital Product Stategy</li>
+        <li class="biolist">Illustration</li>
+      </ul>
 </div>
 </section>
 
