changes projects page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <aside class="menu">
       <a class="blog" href="info.html">Profile</a>
-      <a class="blog" href="projects.html"> Projects</a>
       </aside>
     </nav>
 <content>
@@ -39,7 +38,12 @@ Website is currently under construction!
 
 </section>
 
-
+<section class="project-grid">
+<div onclick="location.href='projects/swish.html'" class="project-swish"></div>
+<div onclick="location.href='projects/milya.html'" class="project-milya"></div>
+<div onclick="location.href='projects/illustrations.html'" class="project-illustration"></div>
+<div onclick="location.href='projects/movingposters.html'" class="project-movingposter"></div>
+</section>
 
 
 
