--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
 <content>
 
 
-<section class="info animated fadeIn">
+<section class="home-grid animated fadeIn">
+<div class="homebox">
+  <blockquote class="attention">
+  Website is currently under construction!
+  </blockquote>
 
-<blockquote class="attention">
-Website is currently under construction!
-</blockquote>
-
-<h1>Justin is a designer based in Toronto, Canada.
-  He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
+  <h1>Justin is a designer based in Toronto, Canada.
+    He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
 
 
-<a class="temporary" href="https://venerism.github.io/blog/">Click to see temporary projects page </a>
+  <a class="temporary" href="https://venerism.github.io/blog/">Click to see temporary projects page </a>
+</div>
 
 </section>
 
