--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" href="css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
+    <script src="/js/main.js"></script>
+
   </head>
   <body>
 
@@ -40,9 +42,10 @@
 </section>
 
 <section class="project-grid">
-<div onclick="location.href='projects/swish.html'" class="project-swish"></div>
-<div onclick="location.href='projects/milya.html'" class="project-milya"></div>
-<div onclick="location.href='projects/illustrations.html'" class="project-illustration"></div>
+<div onclick="location.href='projects/swish.html'" class="project-swish">
+</div>
+<div onclick="location.href='projects/milya.html'" class="project-milya "></div>
+<div onclick="location.href='projects/illustrations.html'" class="project-illustration overlay"></div>
 <div onclick="location.href='projects/movingposters.html'" class="project-movingposter"></div>
 </section>
 
@@ -73,6 +76,8 @@
 </aside>
 
 </article>
+
+
 
 </body>
 
