adds airmax box

--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Projects&mdash;Justin Andre</title>
+    <title>Illustrations&mdash;Justin Andre</title>
     <link rel="icon" href="../img/icon.ico">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="../css/animate.css">
