--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
 </section>
 
 <section class="project-grid">
-<div onclick="location.href='projects/swish.html'" class="project-swish">
-</div>
+<div onclick="location.href='projects/swish.html'" class="project-swish"></div>
 <div onclick="location.href='projects/milya.html'" class="project-milya "></div>
 <div onclick="location.href='projects/illustrations.html'" class="project-illustration"></div>
-<div onclick="location.href='projects/movingposters.html'" class="project-movingposter"></div>
+<div onclick="location.href='projects/movingposters.html'" class="project-airmax"></div>
 </section>
 
 
