--- a/projects/airmaxday.html
+++ b/projects/airmaxday.html
@@ -25,34 +25,51 @@
 
 <content>
 
+<section class="nike-splash">
+  <div class="nike-splash-box"></div>
+</section>
 
+<section class="nike-grid">
+  <div class=" nike-default nike-box-s1"></div>
+  <div class=" nike-default nike-box-s2"></div>
+  <div class=" nike-default nike-box-s3"></div>
+  <div class=" nike-default nike-box-s4"></div>
+  <div class=" nike-default nike-box-l1"></div>
+  <div class=" nike-default nike-box-s5"></div>
+  <div class=" nike-default nike-box-s6"></div>
+  <div class=" nike-default nike-box-s7"></div>
+  <div class=" nike-default nike-box-s8"></div>
+  <div class=" nike-default nike-box-l2"></div>
+</section>
 
-  <article class=" footer animated fadeIn">
-  <aside class="footer-link">
-    <ul>
-
-    <caption>Contact&mdash;</caption>
-    <br>
-    <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
-    </ul>
-  </aside>
-
-  <aside class="footer-link">
-
-
-    <ul>
-      <caption>Elsewhere&mdash;</caption>
-      <br>
-      <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
-      <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
-
-    </ul>
-  </aside>
-
-  </article>
 
 </content>
+
+<article class=" footer animated fadeIn">
+<aside class="footer-link">
+  <ul>
+
+  <caption>Contact&mdash;</caption>
+  <br>
+  <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+  </ul>
+</aside>
+
+<aside class="footer-link">
+
+
+  <ul>
+    <caption>Elsewhere&mdash;</caption>
+    <br>
+    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+
+  </ul>
+</aside>
+
+</article>
+
 
 <div class="scroll-to-top-link">
 <img src="../img/arrow.svg" alt="arrow">
