--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div onclick="location.href='projects/swish.html'" class="project-swish"></div>
 <div onclick="location.href='projects/milya.html'" class="project-milya "></div>
 <div onclick="location.href='projects/illustrations.html'" class="project-illustration"></div>
-<div onclick="location.href='projects/movingposters.html'" class="project-airmax"></div>
+<div onclick="location.href='projects/airmaxday.html'" class="project-airmax"></div>
 </section>
 
 
