--- a/projects/airmaxday.html
+++ b/projects/airmaxday.html
@@ -26,20 +26,28 @@
 <content>
 
 <section class="nike-splash">
+  <div class="nike-title">
+    <h4> Airmax Day</h4>
+  </div>
+  <div class="nike-description">
+    <p>Kids today are on social media 24/7
+    and all they think about is about random stuff
+    </p>
+  </div>
   <div class="nike-splash-box"></div>
 </section>
 
 <section class="nike-grid">
-  <div class=" nike-default nike-box-s1"></div>
-  <div class=" nike-default nike-box-s2"></div>
-  <div class=" nike-default nike-box-s3"></div>
-  <div class=" nike-default nike-box-s4"></div>
-  <div class=" nike-default nike-box-l1"></div>
-  <div class=" nike-default nike-box-s5"></div>
-  <div class=" nike-default nike-box-s6"></div>
-  <div class=" nike-default nike-box-s7"></div>
-  <div class=" nike-default nike-box-s8"></div>
-  <div class=" nike-default nike-box-l2"></div>
+  <div class=" nike-default nike-box-s1"> 1 </div>
+  <div class=" nike-default nike-box-s2"> 2 </div>
+  <div class=" nike-default nike-box-s3"> 3 </div>
+  <div class=" nike-default nike-box-s4"> 4 </div>
+  <div class=" nike-default nike-box-l1"> 5 </div>
+  <div class=" nike-default nike-box-s5"> 6 </div>
+  <div class=" nike-default nike-box-s6"> 7 </div>
+  <div class=" nike-default nike-box-s7"> 8 </div>
+  <div class=" nike-default nike-box-s8"> 9 </div>
+  <div class=" nike-default nike-box-l2"> 10 </div>
 </section>
 
 
