adds overview and inspiration to milya

--- a/projects/milya.html
+++ b/projects/milya.html
@@ -25,6 +25,48 @@
 
 <content>
 
+<section class="milya-splash-box">
+  <div class="milya-title">
+    <h4> Milya </h4>
+  </div>
+  <div class="milya-description">
+    <caption> The Challenge</caption>
+    <p>Kids today are on social media 24/7
+    and all they think about is about random stuff
+    </p>
+  </div>
+  <div class="milya-description">
+    <caption> The Challenge</caption>
+    <p>Kids today are on social media 24/7
+    and all they think about is about random stuff
+    </p>
+  </div>
+  <div class="milya-splash"></div>
+</section>
+
+
+<section class="milya-overview">
+<div class="milya-ov-title">
+  <h3>Overview</h3>
+</div>
+<div class="milya-ov-para">
+  <h2>Swish is a browser and mobile application extentsion
+    that creates a better online shopping experience. One of Swish’s
+    key features is that it collects and compiles all your wishlisted
+    items across all online stores you are logged into. </h2>
+</div>
+<div class="milya-ov-title">
+  <h3>Inspiration</h3>
+</div>
+<div class="milya-ov-para">
+  <h2>Swish is a browser and mobile application extentsion
+    that creates a better online shopping experience. One of Swish’s
+    key features is that it collects and compiles all your wishlisted
+    items across all online stores you are logged into. </h2>  
+</div>
+</section>
+
+</content>
 
 
   <article class=" footer animated fadeIn">
@@ -52,7 +94,6 @@
 
   </article>
 
-</content>
 
 <div class="scroll-to-top-link">
 <img src="../img/arrow.svg" alt="arrow">
