--- a/projects/milya.html
+++ b/projects/milya.html
@@ -19,7 +19,7 @@
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="../info.html">info</a>
+      <a class="blog" href="../info.html">Profile</a>
       </aside>
     </nav>
 
@@ -31,14 +31,14 @@
   </div>
   <div class="milya-description">
     <caption> The Challenge</caption>
-    <p>Kids today are on social media 24/7
-    and all they think about is about random stuff
+    <p>
+    Create a digital platform focused on long distance family relationships.
     </p>
   </div>
   <div class="milya-description">
-    <caption> The Challenge</caption>
-    <p>Kids today are on social media 24/7
-    and all they think about is about random stuff
+    <caption> The Outcome</caption>
+    <p>A digital platform that provides emotional connectivity and practical use between
+      users.
     </p>
   </div>
   <div class="milya-splash"></div>
@@ -50,21 +50,394 @@
   <h3>Overview</h3>
 </div>
 <div class="milya-ov-para">
-  <h2>Swish is a browser and mobile application extentsion
-    that creates a better online shopping experience. One of Swish’s
-    key features is that it collects and compiles all your wishlisted
-    items across all online stores you are logged into. </h2>
+  <h2>
+Milya, or short for “familya” (family in filipino)
+is a multi-function messenger oriented towards families that are separated
+by economic reasons. Intended for Overseas Foreign Workers (OFW),
+Milya is a product that connects families emotionally.</h2>
 </div>
 <div class="milya-ov-title">
   <h3>Inspiration</h3>
 </div>
 <div class="milya-ov-para">
-  <h2>Swish is a browser and mobile application extentsion
-    that creates a better online shopping experience. One of Swish’s
-    key features is that it collects and compiles all your wishlisted
-    items across all online stores you are logged into. </h2>  
+  <h2>
+    My inspiration is based on my personal experience.
+    When I was younger, my father had to leave me and my family to work as
+    an architect in Qatar. Those years were rough in a way, If a product
+    like Milya existed then, it would’ve made my families life a bit easier.
+  </h2>
 </div>
 </section>
+
+<section class="milya-problem">
+  <div class="milya-title">
+    <h3> Defining</h3>
+    <h3>The Problem</h3>
+  </div>
+
+<div class="milya-description">
+<ul>
+  <li>
+    <p>Boys look for male role models like in most
+    traditional family structures (although not required).</li>
+    </p>
+  <li>
+    <p>
+    Birthdays, holidays and special occasions like:
+    graduations, sports events and etc. are difficult
+    to compress how much they miss each other.
+    </p>
+  </li>
+  <li>
+    <p>
+    Difficulty expressing their love for each other
+    because sometimes words are not enough.
+    </p>
+  </li>
+  <li>
+    <p>
+    OFW children miss their mother’s (or father’s)
+    home cooking.
+    </p>
+  </li>
+  <li>
+    <p>
+    OFW children feel uncertain why their parents
+  	left in the first place, despite economic evidence.
+    </p>
+  </li>
+  <li>
+    <p>
+    OFW children sometimes feel abandoned  
+    and this results them to act rebelious.
+    </p>
+  </li>
+</ul>
+</div>
+<div class="milya-description">
+<ul>
+  <li>
+    <p>
+      Safety concerns for both parties.
+    </p>
+  </li>
+  <li>
+    <p>
+    OFW parents may feel that their children
+    does not recognize them anymore
+    </p>
+  </li>
+  <li>
+    <p>
+    OFW parents could use a better financial management
+	  device that can accurately track where they spend their money.
+    </p>
+  </li>
+  <li>
+    <p>
+    Time differences makes it hard to communicate with each other.
+    </p>
+  </li>
+  <li>
+    <p>
+    Technical difficulties such as slow internet connection and
+  	close-to-obsolete devices are still being used.
+    </p>
+  </li>
+</ul>
+</div>
+
+</section>
+
+
+<section class="milya-problem">
+  <div class="milya-title">
+    <h3> Sorting</h3>
+    <h3>The Problem</h3>
+  </div>
+
+<div class="milya-description">
+  <h2> Emotional Pain points</h2>
+<ul>
+  <li>
+    <p>
+    Lack of Parental Guidance
+    </p>
+    </li>
+  <li>
+    <p>
+    Absent during important dates like birthdays, graduations and etc.
+    </p>
+  </li>
+  <li>
+    <p>
+    Difficulty expressing love for each other due verbally
+    </p>
+  </li>
+  <li>
+    <p>
+    The feeling of being abandonedment.
+    </p>
+  </li>
+</ul>
+</div>
+<div class="milya-description">
+  <h2> Day-to-day Hardships</h2>
+<ul>
+  <li>
+    <p>
+      Credit / Funds Transfer
+    </p>
+  </li>
+  <li>
+    <p>
+    Paying for Bills
+    </p>
+  </li>
+  <li>
+    <p>
+    Scheduling and Remembering Important Dates
+    </p>
+  </li>
+  <li>
+    <p>
+    Time Zone Differences and Internet Speeds
+    </p>
+  </li>
+</ul>
+</div>
+
+</section>
+
+
+<section class="milya-personas">
+  <div class="milya-persona-title">
+    <h3> Family Personas</h3>
+  </div>
+  <div class="milya-persona-card">
+    <div class="milya-card-name">
+      <h2> Jessica Gonzalez</h2>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>17</p>
+        </li>
+        <li>
+          <p>Gender: <br>Female</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Eldest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: Social Life & Volleyball</p>
+        </li>
+      </ul>
+
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Values: <br> Be a responsible sister and a good student</p>
+        </li>
+        <li>
+          <p> Fears: <br> Growing apart from her parents
+          </p>
+        </li>
+        <li>
+          <p>
+            Techological Literacy:<br>
+            High
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="milya-persona-card">
+    <div class="milya-card-name">
+      <h2> John Carlo Gonzalez</h2>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>12</p>
+        </li>
+        <li>
+          <p>Gender: <br>Male</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Middle Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: <br> Video Game High Scores & School </p>
+        </li>
+      </ul>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Values:<br> Be a good catholic and student</p>
+        </li>
+        <li>
+          <p>Fears<br>Parents being away for his graduation</p>
+        </li>
+        <li>
+        <p>
+          Technological Literacy<br> High
+        </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="milya-persona-card">
+    <div class="milya-card-name">
+      <h2> Eric Michael Gonzalez</h2>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>7</p>
+        </li>
+        <li>
+          <p>Gender: <br>Male</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Youngest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: <br>
+          Be a better student and do daily chores
+           </p>
+        </li>
+      </ul>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Values: <br> Being a good student</p>
+        </li>
+        <li>
+          <p>Fears:<br>Feeling abandoned</p>
+        </li>
+        <li>
+        <p>
+          Techological Literacy:<br>Medium
+        </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="milya-persona-card">
+    <div class="milya-card-name">
+      <h2>  Herman Gonzalez</h2>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>46</p>
+        </li>
+        <li>
+          <p>Gender: <br>Male</p>
+        </li>
+        <li>
+        <p>
+          Occupation:<br> broker 
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Eldest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: Social Life & Volleyball</p>
+        </li>
+      </ul>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>17</p>
+        </li>
+        <li>
+          <p>Gender: <br>Female</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Eldest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: Social Life & Volleyball</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="milya-persona-card">
+    <div class="milya-card-name">
+      <h2> Theressa Gonzalez</h2>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>17</p>
+        </li>
+        <li>
+          <p>Gender: <br>Female</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Eldest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: Social Life & Volleyball</p>
+        </li>
+      </ul>
+    </div>
+    <div class="milya-card-description">
+      <ul>
+        <li>
+          <p>Age: <br>17</p>
+        </li>
+        <li>
+          <p>Gender: <br>Female</p>
+        </li>
+        <li>
+        <p>
+          School:<br> De LaSalle University
+        </p>
+        </li>
+        <li>
+        <p>Family Member:<br> Eldest Child</p>
+        </li>
+        <li>
+          <p>Personal Goals: Social Life & Volleyball</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
 </content>
 
